--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,6 @@
     android:scrollbars="vertical"
     android:padding="10dp"
     android:id="@+id/layout_recycler_view"
-    tools:listitem="@layout/list_view_item">
+    tools:listitem="@layout/list_view_item"
+    tools:itemCount="5">
 </android.support.v7.widget.RecyclerView>
